# ORI

./: .gitignore  CMakeLists.txt  HowToUse.md  LICENSE  ORI.py  README.md
.github/workflows/: linux.yml  macos.yml
HowDeSBT_strains/: CMakeLists.txt  README.md  bloom_filter.cc  bloom_filter.h  bloom_tree.cc  bloom_tree.h  cmd_distance.cc  cmd_distance.h  cmd_make_bf_qgram.cc  cmd_make_bf_qgram.h  cmd_query_qgram.cc  cmd_query_qgram.h  howdesbt.cc  max_cliques.py  qgram.h  query.cc  query.h  utilities.h
conda/: README.md  environment.yml
conda/ori/: build.sh  environment.yml  meta.yaml
pipeline/: config.sh  distance2.sh  index1.sh  index4.sh  merge3.sh  query.sh
pipeline/tests/: ATCC19258.1.fasta  CIRM368.1.fasta  seed.txt
preconstructed_indexes/Streptococcus_thermophilus/: .gitattributes  05-34.fna.detbrief.rrr.bf  1F8CT.fna.detbrief.rrr.bf  APC151.fna.detbrief.rrr.bf  ASCC1275.fna.detbrief.rrr.bf  ATCC19258.fna.detbrief.rrr.bf  B59671.fna.detbrief.rrr.bf  BIO1488.fna.detbrief.rrr.bf  C106.fna.detbrief.rrr.bf  CAG236.fna.detbrief.rrr.bf  CIRM1035.fna.detbrief.rrr.bf  CIRM1046.fna.detbrief.rrr.bf  CIRM1047.fna.detbrief.rrr.bf  CIRM1048.fna.detbrief.rrr.bf  CIRM1049.fna.detbrief.rrr.bf  CIRM1050.fna.detbrief.rrr.bf  CIRM1051.fna.detbrief.rrr.bf  CIRM1055.fna.detbrief.rrr.bf  CIRM1116.fna.detbrief.rrr.bf  CIRM1121.fna.detbrief.rrr.bf  CIRM1122.fna.detbrief.rrr.bf  CIRM1358.fna.detbrief.rrr.bf  CIRM16.fna.detbrief.rrr.bf  CIRM18.fna.detbrief.rrr.bf  CIRM19.fna.detbrief.rrr.bf  CIRM2101.fna.detbrief.rrr.bf  CIRM23.fna.detbrief.rrr.bf  CIRM29.fna.detbrief.rrr.bf  CIRM32.fna.detbrief.rrr.bf  CIRM336.fna.detbrief.rrr.bf  CIRM36.fna.detbrief.rrr.bf  CIRM368.fna.detbrief.rrr.bf  CIRM65.fna.detbrief.rrr.bf  CIRM67.fna.detbrief.rrr.bf  CIRM961.fna.detbrief.rrr.bf  CIRM967.fna.detbrief.rrr.bf  CNRZ1066.fna.detbrief.rrr.bf  CS8.fna.detbrief.rrr.bf  DGCC7710.fna.detbrief.rrr.bf  EPS.fna.detbrief.rrr.bf  (+105 more)
preconstructed_indexes/Streptococcus_thermophilus_merge/: .gitattributes  0_4_43_51_59_67_8_.detbrief.rrr.bf  13_14_.detbrief.rrr.bf  16_58_60_.detbrief.rrr.bf  17_3_50_52_66_.detbrief.rrr.bf  18_20_23_28_41_42_44_68_.detbrief.rrr.bf  24_30_.detbrief.rrr.bf  26_27_33_34_35_55_.detbrief.rrr.bf  38_39_.detbrief.rrr.bf  47_7_.detbrief.rrr.bf  54_56_69_.detbrief.rrr.bf  5_65_.detbrief.rrr.bf  61_62_.detbrief.rrr.bf  ACA-DC2.fna.detbrief.rrr.bf  CIRM1035.fna.detbrief.rrr.bf  CIRM1050.fna.detbrief.rrr.bf  CIRM1125.fna.detbrief.rrr.bf  CIRM1358.fna.detbrief.rrr.bf  CIRM19.fna.detbrief.rrr.bf  CIRM30.fna.detbrief.rrr.bf  CIRM336.fna.detbrief.rrr.bf  CIRM772.fna.detbrief.rrr.bf  CIRM956.fna.detbrief.rrr.bf  CIRM998.fna.detbrief.rrr.bf  FAM13496.fna.detbrief.rrr.bf  GABA.fna.detbrief.rrr.bf  JIM8232.fna.detbrief.rrr.bf  KLDS3.1003.fna.detbrief.rrr.bf  M17PTZA496.fna.detbrief.rrr.bf  ST106.fna.detbrief.rrr.bf  ST109.fna.detbrief.rrr.bf  ST3.fna.detbrief.rrr.bf  Streptococcus-macedonicus-ACA-DC-198.fna.detbrief.rrr.bf  TH1435.fna.detbrief.rrr.bf  TH1477.fna.detbrief.rrr.bf  TH982.fna.detbrief.rrr.bf  howde.sbt  leafname_merge  length_merge.txt  node1.detbrief.rrr.bf  (+43 more)
python_scripts/: EMalgo.py  Gettaxobf.py  auto_release.py  beautiful_results.py  clean_merge.py  identification.py  length.py  matrice.py  matrix.py  merge_length.py  supprBadQualityRead.py  suppr_bad_quality_read.py  suppr_bad_quality_reads.py  threshold.py  threshold_determination.py
small_example/: README.md
small_example/index/: .gitattributes  ATCC19258.fna  CIRM1048.fna  CIRM1049.fna  CIRM1116.fna  CIRM1122.fna  CIRM16.fna  CIRM18.fna  CIRM19.fna  CIRM2101.fna  CIRM23.fna  CIRM29.fna  CIRM32.fna  CIRM336.fna  CIRM36.fna  CIRM368.fna  CIRM65.fna  CIRM67.fna  CIRM961.fna  CIRM967.fna  CS8.fna  EPS.fna  JIM8232.fna  LMG18311.fna  NCTC12958.fna  S9.fna
small_example/reads/: JIM8232_1000_reads.fastq
tests/: CMakeLists.txt
tests/index_creation/: CIRM65.fasta  CIRM67.fasta  EPS.fasta  JIM8232.fasta  bf_min_size_test.txt  hamming_matrix_test.tsv  howde_test.sbt  leafname  leafname_merge  length_test.txt  list_number_file_test.txt  merge_length_test.txt  test_build.sh  test_clean_merge.sh  test_cluster.sh  test_distance.sh  test_length.sh  test_makebfQ.sh  test_merge.sh  test_merge_length.sh  test_threshold.sh  union_test.sbt
tests/query/: test_suppr_bad_reads.sh
