cmake_minimum_required(VERSION 3.10.0)
project(ORI VERSION 0.0.2)

if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()

include(ExternalProject)
ExternalProject_add(HOWDE
    PREFIX HOWDE
    SOURCE_DIR  ${PROJECT_SOURCE_DIR}/HowDeSBT_strains
    CMAKE_ARGS -DSTRAIN_ONLY=1 -DMAKE_RELEASE=${MAKE_RELEASE}
    INSTALL_COMMAND "")

if (CMAKE_BUILD_TYPE STREQUAL "Release" AND MAKE_RELEASE EQUAL 1)
    SET (CPACK_PACKAGE_DESCRIPTION_SUMMARY  "ORI")
    SET (CPACK_PACKAGE_VENDOR               "G. Siekaniec, E. Roux, T. Lemane, E. Guedon, J. Nicolas")
    SET (CPACK_PACKAGE_VERSION_MAJOR        "${CMAKE_PROJECT_VERSION_MAJOR}")
    SET (CPACK_PACKAGE_VERSION_MINOR        "${CMAKE_PROJECT_VERSION_MINOR}")
    SET (CPACK_PACKAGE_VERSION_PATCH        "${CMAKE_PROJECT_VERSION_PATCH}")
    SET (CPACK_PACKAGE_VERSION              "${CMAKE_PROJECT_VERSION}")
    SET (CPACK_PACKAGE_FILE_NAME            "${CMAKE_PROJECT_NAME}-${CPACK_PACKAGE_VERSION}-bin-${CMAKE_SYSTEM_NAME}")
    SET (CPACK_GENERATOR                    "TGZ")
    SET (CPACK_SOURCE_GENERATOR             "TGZ")
    SET (CPACK_SET_DESTDIR true)
    SET (CPACK_INSTALL_PREFIX /)
    
    
    INSTALL (FILES ${CMAKE_SOURCE_DIR}/ORI.py DESTINATION . PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ)
    INSTALL (DIRECTORY ${CMAKE_SOURCE_DIR}/python_scripts DESTINATION . FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ)
    INSTALL (DIRECTORY ${CMAKE_SOURCE_DIR}/pipeline DESTINATION . FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ)
    INSTALL (FILES ${CMAKE_SOURCE_DIR}/HowDeSBT_strains/howdesbt DESTINATION . PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ)
    INSTALL (FILES ${CMAKE_SOURCE_DIR}/README.md DESTINATION .)
    INSTALL (FILES ${CMAKE_SOURCE_DIR}/LICENSE DESTINATION .)
    
    include (CPack)
endif()

enable_testing()
add_subdirectory(tests)


